Create Parser service and CronParser implementation class
`
- Implement Interpreter class which will serve as parent class for other interpreters
- Create CronParserTest class for future unit tests
- Add JUnit dependency in the pom.xml file
- Delete placeholder classes
- Add target folder to .gitignore file

--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,33 @@
     <artifactId>cron-parser</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <!-- Testing dependencies -->
+        <junit.version>4.12</junit.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
