Implement Cron expression splitting strategy and Cron expression field type interpreters
- Create interpreter for each of the field types
- Implement Interpreter factory class
- Add FieldType enum to hold ranges for field types
- Create CronField class which stores the field type and it's value
- Add Apache Commons dependency in the pom.xml file

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 
         <!-- Testing dependencies -->
         <junit.version>4.12</junit.version>
+        <apache.commons.version>3.7</apache.commons.version>
     </properties>
 
     <dependencies>
@@ -35,6 +36,12 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
         </dependency>
-    </dependencies>
 
+        <!-- Get rid of hte commons library. Implement a own Range type-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${apache.commons.version}</version>
+        </dependency>
+    </dependencies>
 </project>
